--- a/client/src/styles/page/home.module.css
+++ b/client/src/styles/page/home.module.css
@@ -39,3 +39,16 @@
     justify-content: center;
     /* text-align: center; */
 }
+.form input[type=checkbox]{
+    width: 7%;
+}
+
+@media screen and (width < 480px) {
+    .form input[type=checkbox]{
+        width: 15%;
+    }
+    .form{
+        width: 80%;
+        min-height: 40vh;
+    }
+}
